<resources>
    <string name="app_name">RUVCom</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Paramètres</string>

    <string name="action_pictures_nextToMe">Photos à proximités</string>

    <string name="loading">Chargement ...</string>

    <string name="internal_error">Erreur de chargement</string>

    <string name="no_conversation">Aucune conversation</string>
    <string name="no_message">Aucun message</string>

    <string name="no_message_description">N\'hésitez pas à discuter !</string>

    <string name="send_picture">Envoyer la photo</string>
    <string name="cancel">Annuler</string>

    <!-- Google+ API -->
    <string name="title_text">Connexion via Google</string>
    <string name="btn_logout">Déconnexion</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="desc_google_icon">Google Logo</string>
    <string name="title_activity_main">Conversations</string>
    <string name="title_activity_settings">Paramètres</string>
    <string name="title_activity_upload">Envoi de l\'image au serveur</string>
    <string name="title_activity_full_screen_image">Image en plein écran</string>
    <string name="title_activity_picture_maps">Photos à proximités</string>

    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_header_advance">Avancé</string>
    <string name="pref_header_informations">Informations</string>
    <string name="pref_header_customisation">Customisation</string>

    <string name="pref_title_cache">Vider le cache</string>
    <string name="pref_title_last_apk">Télécharger la dernière version</string>
    <string name="pref_title_version">Version</string>

    <string name="pref_cache">pref_cache</string>
    <string name="pref_download_last_apk">pref_last_apk</string>
    <string name="pref_version">pref_version</string>
    <string name="pref_reset_color">pref_reset_color</string>

    <string name="pref_title_customisation">Changer la couleur</string>
    <string name="pref_title_customisation_dialog">Choisir une couleur</string>
    <string name="pref_title_color_default">Remettre la couleur par default</string>
    <string name="pref_summary_customisation">Choisissez une couleur pour l\'application</string>

    <string name="pref_title_new_message_notifications">Recevoir des notifications</string>
    <string name="pref_title_ringtone">Sonnerie</string>
    <string name="pref_ringtone_silent">Silencieux</string>
    <string name="pref_title_vibrate">Vibreur</string>

    <string name="gps_network_not_enabled">Le GPS n\'est pas activé</string>
    <string name="activate_gps">Activer le GPS</string>
    <string name="open_location_settings">Voulez-vous activer votre GPS afin de pouvoir localiser vos photos ?</string>

</resources>
