<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_header_notifications">
        <!-- A 'parent' preference, which enables/disables child preferences (below)
             when checked/unchecked. -->
        <SwitchPreference
            android:defaultValue="true"
            android:key="notifications_new_message"
            android:title="@string/pref_title_new_message_notifications" />

        <!-- Allows the user to choose a ringtone in the 'notification' category. -->
        <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
        <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="notifications_new_message"
            android:key="notifications_new_message_ringtone"
            android:ringtoneType="notification"
            android:title="@string/pref_title_ringtone" />

        <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
        <SwitchPreference
            android:defaultValue="true"
            android:dependency="notifications_new_message"
            android:key="notifications_new_message_vibrate"
            android:title="@string/pref_title_vibrate" />
    </PreferenceCategory>


    <PreferenceCategory android:title="@string/pref_header_customisation">

        <com.github.danielnilsson9.colorpickerview.preference.ColorPreference
            android:key="pref_general_color"
            android:summary="@string/pref_summary_customisation"
            android:title="@string/pref_title_customisation" />

        <Preference
            android:key="@string/pref_reset_color"
            android:title="@string/pref_title_color_default"
            android:summary=""/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_header_advance">

        <Preference
            android:key="@string/pref_cache"
            android:title="@string/pref_title_cache"
            android:summary=""/>

        <Preference
            android:key="@string/pref_download_last_apk"
            android:title="@string/pref_title_last_apk"
            android:summary=""/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_header_informations">

        <Preference
            android:key="@string/pref_version"
            android:title="@string/pref_title_version"
            android:summary=""/>

    </PreferenceCategory>

</PreferenceScreen>